infrastructure/01-system/crowdsec/manifests/bouncer-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: crowdsec-bouncer
  namespace: crowdsec
spec:
  plugin:
    crowdsec-bouncer:
      Enabled: true
      CrowdsecLapiUrl: "http://crowdsec-lapi.crowdsec.svc.cluster.local:8080"
      CrowdsecLapiKey: "dec458e3ca2f3922f5d72f10b89b6576"
